# vibe-flow

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  main.py  mcp.json  package-lock.json  package.json  pyproject.toml  vscode-settings.json
.claude/: settings.json  statusline.sh
.claude/hooks/: format-py.sh
.githooks/: pre-commit
.pre-commit-hooks/: forbid-binary-files.sh
docs/: 01-entry-point-and-core-loop.md  02-built-in-tools.md  03-navigating-the-source.md  04-system-prompt.md  05-prompt-caching.md  06-why-claude-code-works.md  07-llm-api-comparison.md  08-system-prompt-static-analysis.md  09-system-prompt-dynamic-analysis.md  10-system-prompt-summary.md  11-anthropic-api-pricing.md  12-openai-api-data-structures.md  13-anthropic-api-data-structures.md  14-key-api-difference-text-plus-tool.md  15-transformer-architecture.md  16-tool-execution-deep-dive.md  17-sub-agent-design.md  18-sub-agent-source-analysis.md  19-skills-design.md  20-tool-execution-python-rewrite-plan.md  21-three-agents-compared.md  22-three-agents-design-overview.md  claude-code-leak-github-analysis.md  claude-code-leak-investigation-steps.md.md  codex-cli-models.md  rag-learning-notes.md
docs/bash/: bash-fundamentals.md
docs/claude-code/: ai-agent-concepts.md  claude-code-features.md  codebase-qa-agent-design.md  mcp-setup-guide.md  memory-and-persistence.md
docs/project/: 02-app-protocol.md  (+1 more)
scratch/: README.md
scripts/: mcp_server.py
src/: agent.py  lib.rs  main.py  main.rs  tool_base.py  tool_runner.py
tmux-conf/: .tmux.conf.local
(+74 files in other folders)
