[project]
name = "vibe-flow"
version = "0.1.0"
description = "Python rewrite of Claude Code's core agent logic"
requires-python = ">=3.12"
dependencies = [
    "openai",
    "python-dotenv>=1.2.2",
    "textual>=0.80",
]

[project.scripts]
vibe-flow = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
