[project]
name = "vibe-flow"
version = "0.1.0"
description = "Python rewrite of Claude Code's core agent logic"
requires-python = ">=3.12"
dependencies = [
    "litellm",
    "mcp>=1.0",
    "python-dotenv>=1.2.2",
    "textual>=0.80",
]

[project.scripts]
vibe-flow = "vibe_flow.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vibe_flow"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[dependency-groups]
dev = [
    "pyright>=1.1.408",
]

